--- a/frontend/src/pages/Home/flex.css
+++ b/frontend/src/pages/Home/flex.css
@@ -15,6 +15,11 @@ main {
   justify-content: center
 }
 
+#fiveTicks {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 
 .fiveTicksAndSheets-section {
   display: flex;
