change page layout

--- a/frontend/src/pages/Home/flex.css
+++ b/frontend/src/pages/Home/flex.css
@@ -15,6 +15,10 @@ main {
   justify-content: center
 }
 
+.main-header {
+  display: flex;
+}
+
 #fiveTicks {
   display: flex;
   justify-content: space-around;
