--- a/frontend/src/pages/Home/base.css
+++ b/frontend/src/pages/Home/base.css
@@ -1,46 +1,73 @@
-th {
-  padding: 10px;
+* {
+  box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  background: rgb(39, 47, 71);
+  color: #777;
+  font-family: 'Apple LiSung Light';
 
-
-table {
-  border-collapse: collapse;
 }
 
-/* table thead tr th {
-  border-bottom: 1px solid #000000;
-} */
+footer {
+  height: 115px;
 
-table thead {
-  border: 1px solid rgba(23, 173, 54);
 }
 
-/* table th,
-table td { */
-/* Added padding for better layout after collapsing */
-/* padding: 4px 8px;
-} */
+ul {
+  list-style: none;
+}
 
-
-
-
-
-
-
-
-
+.footer-info {
+  padding: 0
+}
 
 .main-header {
-  margin: 0 0 40px 0;
+  margin: 0 0 80px 0;
   height: 100px;
+  background-color: #fff3b0;
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15)
+}
+
+.name-logo {
+  display: flex;
+}
+
+.name-logo h1 {
+
+  margin-top: 0;
+}
+
+
+a {
+  text-decoration: none;
+  color: #335c67;
+}
+
+img {
+  max-width: 100%;
+}
+
+.logo {
+  height: 5em;
+}
+
+
+#root {
+  margin: 0 auto 0;
+  width: 1200px;
+
 }
 
 
 #candleStick {
-  width: 1200px;
   max-width: 1200px;
 
+}
+
+svg {
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15)
 }
 
 #fiveTicks {
@@ -57,24 +84,46 @@ table td { */
   margin: 1%;
   width: 49%;
   margin-right: 0px;
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15)
 }
 
-body {
-  max-width: 1300px;
-  margin: auto;
-  background: rgb(39, 47, 71);
-  color: #777;
+
+
+table {
+  border-collapse: collapse;
+  color: #fff;
 }
 
-footer {
-  height: 115px;
+
+.buyerFiveTicks thead {
+  border: 1px solid rgb(239, 64, 60);
+}
+
+.sellerFiveTicks thead {
+  border: 1px solid rgba(23, 173, 54);
+}
+
+
+table th,
+table td {
+  width: 33.3%;
+  height: 46px;
+  padding: 4px;
+  font-size: 12pt;
+  letter-spacing: 4px;
+  text-align: center;
 
 }
 
-ul {
-  list-style: none;
+.ticks {
+  width: 50%;
+  margin: 0.5px;
 }
 
-.footer-info {
-  padding: 0
+.buyerTickPrice {
+  color: rgba(23, 173, 54);
+}
+
+.sellerTickPrice {
+  color: rgb(239, 64, 60);
 }
