change header and footer layout and fix socket re-render

--- a/frontend/src/pages/Home/base.css
+++ b/frontend/src/pages/Home/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Roboto+Serif:wght@100&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -17,32 +19,37 @@ footer {
 
 ul {
   list-style: none;
+  margin: 0 20px;
 }
 
 .footer-info {
   padding: 0
 }
 
+li a {
+  margin: 10px
+}
+
 .main-header {
   margin: 0 0 80px 0;
   height: 100px;
-  background-color: #fff3b0;
-  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15)
+  background-color: rgb(32, 33, 48);
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
+  display: flex;
+  justify-items: center;
+  align-items: center;
 }
 
 .name-logo {
   display: flex;
-}
-
-.name-logo h1 {
-
-  margin-top: 0;
+  width: 100%;
 }
 
 
-a {
+h1 a {
   text-decoration: none;
-  color: #335c67;
+  color: #fff;
+  font-family: Inter;
 }
 
 img {
@@ -51,19 +58,26 @@ img {
 
 .logo {
   height: 5em;
+  margin: auto 0 auto 40px;
+}
+
+.name {
+  margin: 20px auto 0;
+  font-size: 40px;
 }
 
 
 #root {
   margin: 0 auto 0;
-  width: 1200px;
+  min-width: 1200px;
+
 
 }
 
 
 #candleStick {
-  max-width: 1200px;
-
+  /* max-width: 1200px; */
+  width: 100%
 }
 
 svg {
@@ -96,11 +110,11 @@ table {
 
 
 .buyerFiveTicks thead {
-  border: 1px solid rgb(239, 64, 60);
+  border: 3px solid rgb(239, 64, 60);
 }
 
 .sellerFiveTicks thead {
-  border: 1px solid rgba(23, 173, 54);
+  border: 3px solid rgba(23, 173, 54);
 }
 
 
@@ -109,7 +123,7 @@ table td {
   width: 33.3%;
   height: 46px;
   padding: 4px;
-  font-size: 12pt;
+  font-size: 14pt;
   letter-spacing: 4px;
   text-align: center;
 
@@ -120,10 +134,25 @@ table td {
   margin: 0.5px;
 }
 
+.tickBar,
+.sellerPercentBar,
+.buyerPercentBar {
+  height: 12px;
+}
+
 .buyerTickPrice {
   color: rgba(23, 173, 54);
 }
 
+.sellerPercentBar {
+  background-color: rgba(23, 173, 54);
+}
+
 .sellerTickPrice {
   color: rgb(239, 64, 60);
+}
+
+.buyerPercentBar {
+  background-color: rgb(239, 64, 60);
+  float: right;
 }
