--- a/frontend/src/pages/Home/base.css
+++ b/frontend/src/pages/Home/base.css
@@ -68,15 +68,15 @@ img {
 
 
 #root {
-  margin: 0 auto 0;
-  min-width: 1200px;
+  margin: 0 250px 0;
+  /* min-width: 1200px; */
 
 
 }
 
 
 #candleStick {
-  /* max-width: 1200px; */
+  /* margin: auto; */
   width: 100%
 }
 
@@ -84,7 +84,8 @@ svg {
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15)
 }
 
-#fiveTicks {
+#fiveTicks,
+#newOrder-section {
   width: 49%;
   height: 300px;
   background-color: #202130;
@@ -93,7 +94,8 @@ svg {
 
 }
 
-#sheets {
+#stockInfo-section,
+#orderHistory-section {
   background-color: #202130;
   margin: 1%;
   width: 49%;
@@ -126,6 +128,7 @@ table td {
   font-size: 14pt;
   letter-spacing: 4px;
   text-align: center;
+  line-height: 1.5;
 
 }
 
@@ -138,6 +141,7 @@ table td {
 .sellerPercentBar,
 .buyerPercentBar {
   height: 12px;
+  width: 90%;
 }
 
 .buyerTickPrice {
@@ -155,4 +159,43 @@ table td {
 .buyerPercentBar {
   background-color: rgb(239, 64, 60);
   float: right;
+}
+
+#newOrder-section {
+  font-size: 14pt;
+  color: #fff;
+  letter-spacing: 4px;
+  line-height: 1.5;
+}
+
+#newOrder-section button {
+  width: 50%;
+  height: 30px;
+  margin: 5px;
+  border: solid 1px #979797;
+  background-color: var(--black);
+  color: var(--white-two);
+  cursor: pointer;
+}
+
+.stockDetail {
+  font-size: 25px;
+  margin: 15px 0;
+}
+
+.stockInfo-leftBlock,
+.stockInfo-rightBlock {
+  width: 50%;
+}
+
+.ups {
+  color: rgb(239, 64, 60)
+}
+
+.downs {
+  color: rgba(23, 173, 54)
+}
+
+.highlight {
+  font-weight: bold;
 }
