revise page layout

--- a/frontend/src/pages/Home/flex.css
+++ b/frontend/src/pages/Home/flex.css
@@ -49,16 +49,13 @@ main {
 .price-section,
 .quantity-section,
 .newOrderbuttons,
-#stockInfo-section {
+#stockInfo-section,
+.orderType {
   display: flex;
 }
 
 .price-section,
 .quantity-section {
   flex-wrap: nowrap;
-}
-
-.stockInfo-leftBlock,
-.stockInfo-rightBlock {
-  width: 50%;
+  justify-content: space-between;
 }
