--- a/frontend/src/pages/Home/base.css
+++ b/frontend/src/pages/Home/base.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Roboto+Serif:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100&family=Roboto+Serif:wght@100&display=swap');
 
 * {
   box-sizing: border-box;
@@ -13,7 +13,7 @@ body {
 }
 
 footer {
-  height: 115px;
+  height: 150px;
 
 }
 
@@ -30,14 +30,17 @@ li a {
   margin: 10px
 }
 
+
+
 .main-header {
   margin: 0 0 80px 0;
-  height: 100px;
+  height: 160px;
   background-color: rgb(32, 33, 48);
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
   display: flex;
   justify-items: center;
   align-items: center;
+  width: 100%
 }
 
 .name-logo {
@@ -45,11 +48,16 @@ li a {
   width: 100%;
 }
 
+.name-log-section {
+  margin: auto
+}
+
 
 h1 a {
   text-decoration: none;
   color: #fff;
   font-family: Inter;
+
 }
 
 img {
@@ -58,12 +66,13 @@ img {
 
 .logo {
   height: 5em;
-  margin: auto 0 auto 40px;
+  /* margin: auto; */
 }
 
 .name {
-  margin: 20px auto 0;
+  /* margin: 20px auto 0; */
   font-size: 40px;
+  margin-bottom: 0
 }
 
 
@@ -87,7 +96,7 @@ svg {
 #fiveTicks,
 #newOrder-section {
   width: 49%;
-  height: 300px;
+  /* height: 300px; */
   background-color: #202130;
   margin: 1%;
   margin-left: 0px;
@@ -141,7 +150,7 @@ table td {
 .sellerPercentBar,
 .buyerPercentBar {
   height: 12px;
-  width: 90%;
+  max-width: 79px;
 }
 
 .buyerTickPrice {
@@ -169,18 +178,24 @@ table td {
 }
 
 #newOrder-section button {
-  width: 50%;
-  height: 30px;
-  margin: 5px;
+  width: 49%;
+  height: 45px;
+  margin: 10px;
   border: solid 1px #979797;
   background-color: var(--black);
   color: var(--white-two);
   cursor: pointer;
+  font-size: 18px;
+  border-radius: 5px
 }
+
 
 .stockDetail {
   font-size: 25px;
   margin: 15px 0;
+  padding: 0 0 0 10px;
+  font-weight: bold;
+
 }
 
 .stockInfo-leftBlock,
@@ -198,4 +213,69 @@ table td {
 
 .highlight {
   font-weight: bold;
+}
+
+.stockDetail {
+  margin: 15px 25px
+}
+
+.newOrder {
+  margin: 0 25px
+}
+
+.orderButtons {
+  height: 60px !important;
+  margin-bottom: 20px !important;
+}
+
+.orderHistory {
+  width: 100%;
+
+}
+
+.orderHistory th,
+.orderHistory td {
+  width: 20%;
+  padding: 15px 5px
+}
+
+.inAndDe {
+  width: 45px !important;
+}
+
+.quantity,
+.price {
+  width: 300px;
+  height: 45px;
+  border-radius: 5px;
+  text-align: center;
+  margin: 10px;
+  border-style: none
+}
+
+.button-selected {
+  background-color: antiquewhite !important;
+  color: rgb(32, 33, 48) !important;
+  border: solid 3px rgb(245, 203, 149) !important;
+  box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.3);
+}
+
+.button-unselected {
+  background-color: rgb(17, 17, 26) !important;
+  color: #3a3a3a !important;
+  border: solid 1px #3a3a3a !important;
+}
+
+.buyOrder {
+  background-color: rgb(239, 64, 60) !important;
+  border: none !important
+}
+
+.sellOrder {
+  background-color: rgb(23, 173, 54) !important;
+  border: none !important
+}
+
+.orderHistory td {
+  font-size: 16px;
 }
