--- a/frontend/src/pages/Home/base.css
+++ b/frontend/src/pages/Home/base.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100&family=Roboto+Serif:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Roboto+Serif:wght@100&display=swap');
 
 * {
   box-sizing: border-box;
@@ -49,7 +49,8 @@ li a {
 }
 
 .name-log-section {
-  margin: auto
+  margin: auto;
+  margin-bottom: 20px
 }
 
 
@@ -65,7 +66,7 @@ img {
 }
 
 .logo {
-  height: 5em;
+  height: 7em;
   /* margin: auto; */
 }
 
