--- a/frontend/src/pages/Home/base.css
+++ b/frontend/src/pages/Home/base.css
@@ -31,8 +31,8 @@ li a {
 
 
 .main-header {
-  margin: 0 0 80px 0;
-  height: 160px;
+  margin: 0 0 50px 0;
+  height: 115px;
   background-color: rgb(32, 33, 48);
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
   display: flex;
@@ -56,7 +56,7 @@ h1 a {
   text-decoration: none;
   color: #fff;
   font-family: Inter;
-  margin-left: 20px;
+  margin-left: -25px;
 
 }
 
@@ -65,19 +65,20 @@ img {
 }
 
 .logo {
-  height: 7em;
+  height: 4em;
   /* margin: auto; */
 }
 
 .name {
   /* margin: 20px auto 0; */
-  font-size: 40px;
-  margin-bottom: 0
+  font-size: 28px;
+  margin-bottom: 0;
+  margin-top: 20px
 }
 
 
 #root {
-  margin: 0 250px 0;
+  margin: 0 180px 0;
   /* min-width: 1200px; */
 
 
@@ -303,18 +304,63 @@ table td {
   width: 100%;
 }
 
+.orderHistoryTabletr {
+  cursor: pointer;
+}
+
+.orderHistoryTabletr:hover {
+  background-color: rgb(94, 112, 166) !important;
+}
+
 /*--------------*/
 
-.form__datatype {
-  display: flex;
-  justify-content: space-between;
+
+
+
+
+.editingWindow {
+  background-color: rgb(94, 112, 166);
+  position: fixed;
+  width: 400px;
+  height: 300px;
+  top: 50%;
+  right: 42.5%;
+  margin-top: -290px;
+  margin-right: -75px;
+  font-size: 14pt;
+  text-align: center;
 }
 
-.form__empty {
-  color: red;
+.editingWindowButton {
+  height: 60px;
+  width: 50%;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 5px;
+  margin: auto;
+  border: none;
+
 }
 
-.form__empty--submit {
-  display: flex;
-  justify-content: flex-end;
+
+
+.editingWindowTitle,
+.editingWindowOrderInfo {
+  /* flex: 1 */
+  color: #fff;
+}
+
+.editingWindowTitle {
+  font-size: 20pt
+}
+
+.quantity-section button {
+  height: 45px;
+  margin: 10px;
+  border: solid 1px #979797;
+  background-color: var(--black);
+  color: var(--white-two);
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 5px;
 }
