--- a/frontend/src/pages/Home/flex.css
+++ b/frontend/src/pages/Home/flex.css
@@ -59,3 +59,14 @@ main {
   flex-wrap: nowrap;
   justify-content: space-between;
 }
+
+.editingWindow {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.editingWindowOrderInfo,
+.quantity-section {
+  flex: 0.5
+}
